Add datepicker and color selection

--- a/app/login.html
+++ b/app/login.html
@@ -11,27 +11,40 @@
 
 	<body>
 		<div class="Login Content">
+			<!-- Container -->
 			<div class="Box">
+				<!-- Logo -->
 				<img class="logo" src="resources/assets/icons/box.svg" />
+
+				<!-- Header -->
 				<h3 class="header text-blue">Welcome!</h3>
+
+				<!-- Description -->
 				<p class="description">
 					Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
 					nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
 					volutpat. Ut wisi enim ad minim veniam, quis nos
 				</p>
 
+				<!-- Form and Buttons -->
 				<div class="form">
+					<!-- Email -->
 					<input type="email" class="input" id="email" placeholder="Email ID" />
+
+					<!-- Password -->
 					<input
 						type="password"
 						class="input"
 						id="password"
 						placeholder="Password"
 					/>
+
+					<!-- Submit / Login button -->
 					<button class="btn-submit bg-blue" id="login">Log In</button>
 				</div>
 
 				<div class="details">
+					<!-- Keep me Signed In -->
 					<div class="Checkbox">
 						<label>
 							<input type="checkbox" id="keep-me-signed-in" />
@@ -40,17 +53,20 @@
 						</label>
 					</div>
 
+					<!-- Forgot Password -->
 					<a class="link text-blue" href="javascript:void(0)">
 						Forgot Password?
 					</a>
 				</div>
 
+				<!-- Not a Member -->
 				<div class="not-a-member-container">
 					<a class="link text-blue" href="javascript:void(0)">
 						Not a member?
 					</a>
 				</div>
 			</div>
+			<!-- /Container -->
 		</div>
 
 		<!-- Vendor JS -->
