--- a/app/main.html
+++ b/app/main.html
@@ -10,6 +10,10 @@
 			href="resources/vendor/metis-menu/dist/metismenujs.min.css"
 		/>
 		<link rel="stylesheet" href="resources/vendor/modal/modal.min.css" />
+		<link
+			rel="stylesheet"
+			href="resources/vendor/datepicker/datepicker.min.css"
+		/>
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="resources/css/normalize.css" />
@@ -18,9 +22,14 @@
 
 	<body>
 		<div class="Main">
+			<!-- Header Section -->
 			<div class="header">
+				<!-- Column: Logo -->
 				<div class="logo"></div>
+
+				<!-- Column: Configuration -->
 				<div class="configuration">
+					<!-- Switch -->
 					<div class="switch-container">
 						<span class="switch-value">off</span>
 						<label class="Switch">
@@ -29,15 +38,22 @@
 						</label>
 						<span class="switch-value">on</span>
 					</div>
+
+					<!-- Title -->
 					<span class="kleeboard">Kleeboard</span>
-					<span class="date">
-						June 05 2020
+
+					<!-- Date -->
+					<span class="date" id="datepicker-trigger">
+						<span data-toggle="datepicker"></span>
+
 						<img
 							class="arrow-icon"
 							src="resources/assets/icons/arrow-down.svg"
 						/>
 					</span>
 				</div>
+
+				<!-- Column: User Configuration -->
 				<div class="user">
 					<a href="popup-user-info.html" target="_blank">
 						<div class="container">
@@ -51,18 +67,29 @@
 				</div>
 			</div>
 
+			<!-- Main Content -->
 			<div class="main-content">
+				<!-- Folders -->
 				<div class="folders">
-					<a class="btn-new-folder" href="#modal-new-folder" rel="modal:open">
-						+ New Folder
+					<!-- New Folder -->
+					<!-- href targets the New Folder Modal by supplying the modal's id -->
+					<a class="btn-new-folder" href="#modal-new-folder" rel="modal:open"
+						>+ New Folder
 					</a>
 
+					<!-- List of Folders -->
 					<div class="list">
+						<!-- Folder Item -->
 						<div class="item">
+							<!-- Checkbox -->
 							<div class="CircularCheckbox">
+								<!-- Checkbox `id` and Label `for` must be the same and must be unique from other items -->
 								<input type="checkbox" id="folder-id-1" />
+								<!-- Checkbox `id` and Label `for` must be the same and must be unique from other items -->
 								<label for="folder-id-1"> </label>
 							</div>
+
+							<!-- Folder name -->
 							<span class="title">
 								<img
 									src="resources/assets/icons/folder-gray.svg"
@@ -73,6 +100,7 @@
 							</span>
 						</div>
 
+						<!-- Folder Item : Active -->
 						<div class="item active">
 							<div class="CircularCheckbox">
 								<input type="checkbox" id="folder-id-2" />
@@ -88,6 +116,7 @@
 							</span>
 						</div>
 
+						<!-- Folder Item -->
 						<div class="item">
 							<div class="CircularCheckbox">
 								<input type="checkbox" id="folder-id-3" />
@@ -103,6 +132,7 @@
 							</span>
 						</div>
 
+						<!-- Folder Item -->
 						<div class="item">
 							<div class="CircularCheckbox">
 								<input type="checkbox" id="folder-id-4" />
@@ -118,6 +148,7 @@
 							</span>
 						</div>
 
+						<!-- Folder Item -->
 						<div class="item">
 							<div class="CircularCheckbox">
 								<input type="checkbox" id="folder-id-5" />
@@ -133,6 +164,7 @@
 							</span>
 						</div>
 
+						<!-- Folder Item -->
 						<div class="item">
 							<div class="CircularCheckbox">
 								<input type="checkbox" id="folder-id-6" />
@@ -149,11 +181,14 @@
 						</div>
 					</div>
 
+					<!-- Folder Bulk Actions -->
 					<ul class="dropdown-menu" id="folder-bulk-actions">
 						<li>
 							<a class="button has-arrow" href="javascript:void(0)">
 								Bulk Actions
 							</a>
+
+							<!-- Menu -->
 							<ul class="dropdown-panel">
 								<li>
 									<img
@@ -164,20 +199,33 @@
 									Archive
 								</li>
 								<li>
-									<img
-										src="resources/assets/icons/trash-gray.svg"
-										width="20"
-										height="20"
-									/>
-									Delete
+									<a
+										class="modal-button"
+										href="#modal-delete-confirmation"
+										rel="modal:open"
+									>
+										<img
+											src="resources/assets/icons/trash-gray.svg"
+											width="20"
+											height="20"
+										/>
+										Delete
+									</a>
 								</li>
 								<li>
-									<img
-										src="resources/assets/icons/circle-gray.svg"
-										width="17"
-										height="17"
-									/>
-									Color Code
+									<a
+										class="modal-button"
+										href="#modal-color-selection"
+										rel="modal:open"
+										value="folder-bulk"
+									>
+										<img
+											src="resources/assets/icons/circle-gray.svg"
+											width="17"
+											height="17"
+										/>
+										Color Code
+									</a>
 								</li>
 								<li>
 									<img
@@ -199,6 +247,7 @@
 						</li>
 					</ul>
 
+					<!-- Settings Button -->
 					<a class="btn-settings" href="popup-settings.html" target="_blank">
 						<svg
 							id="Layer_1"
@@ -219,16 +268,23 @@
 						Settings
 					</a>
 				</div>
+
+				<!-- Folder Contents -->
 				<div class="contents">
+					<!-- Search Input -->
 					<input type="text" id="search" placeholder="Search" />
 
+					<!-- Contents : Dynamically inserted. Please check the JS file to see how it was inserted -->
 					<div class="list"></div>
 
+					<!-- Folder Contents Bulk Actions -->
 					<ul class="dropdown-menu" id="content-bulk-actions">
 						<li>
 							<a class="button has-arrow" href="javascript:void(0)">
 								Bulk Actions
 							</a>
+
+							<!-- Menu -->
 							<ul class="dropdown-panel">
 								<li>
 									<img
@@ -239,20 +295,33 @@
 									Archive
 								</li>
 								<li>
-									<img
-										src="resources/assets/icons/trash-gray.svg"
-										width="20"
-										height="20"
-									/>
-									Delete
+									<a
+										class="modal-button"
+										href="#modal-delete-confirmation"
+										rel="modal:open"
+									>
+										<img
+											src="resources/assets/icons/trash-gray.svg"
+											width="20"
+											height="20"
+										/>
+										Delete
+									</a>
 								</li>
 								<li>
-									<img
-										src="resources/assets/icons/circle-gray.svg"
-										width="17"
-										height="17"
-									/>
-									Color Code
+									<a
+										class="modal-button"
+										href="#modal-color-selection"
+										rel="modal:open"
+										value="folder-content-bulk"
+									>
+										<img
+											src="resources/assets/icons/circle-gray.svg"
+											width="17"
+											height="17"
+										/>
+										Color Code
+									</a>
 								</li>
 								<li>
 									<img
@@ -276,6 +345,7 @@
 				</div>
 			</div>
 
+			<!-- Popup Modal for New Folder -->
 			<div id="modal-new-folder" class="modal">
 				<p class="message">Please input a folder name.</p>
 				<div class="actions">
@@ -284,6 +354,7 @@
 				</div>
 			</div>
 
+			<!-- Popup Modal for Delete Confirmation -->
 			<div id="modal-delete-confirmation" class="modal">
 				<p class="message">Are you sure you want to delete this?</p>
 
@@ -293,23 +364,64 @@
 				</div>
 			</div>
 
-			<div class="Snackbar" id="snackbar-copy">Copied</div>
+			<!-- Popup Modal for Color Selection -->
+			<div id="modal-color-selection" class="modal">
+				<div class="colors">
+					<div value="color-green" class="green selected">
+						<img src="resources/assets/icons/check-white.svg" />
+					</div>
+					<div value="color-violet" class="violet">
+						<img src="resources/assets/icons/check-white.svg" />
+					</div>
+					<div value="color-blue" class="blue">
+						<img src="resources/assets/icons/check-white.svg" />
+					</div>
+					<div value="color-red" class="red">
+						<img src="resources/assets/icons/check-white.svg" />
+					</div>
+					<div value="color-yellow" class="yellow">
+						<img src="resources/assets/icons/check-white.svg" />
+					</div>
+				</div>
+				<div class="actions">
+					<a class="btn-cancel" href="#" rel="modal:close">Cancel</a>
+					<button class="btn-apply" disabled>Apply</button>
+				</div>
+			</div>
 
+			<!-- Popup for Copied -->
+			<div class="Snackbar" id="snackbar"></div>
+
+			<!-- Cloneable Folder Content : Used for dynamically inserting contents	 -->
 			<div class="item cloneable">
+				<!-- Date -->
 				<div class="date">
 					<span class="day">Mon</span>
 					<span class="day-number">10</span>
 				</div>
+
+				<!-- Vertical Divider -->
 				<div class="divider"></div>
+
+				<!-- Main Content -->
 				<div class="details">
+					<!-- Checkbox -->
 					<div class="CircularCheckbox">
+						<!-- Checkbox `id` and Label `for` must be the same and must be unique from other items -->
 						<input type="checkbox" id="checkbox-id-1" />
-						<label class="query-name" for="checkbox-id-1"></label>
+						<!-- Checkbox `id` and Label `for` must be the same and must be unique from other items -->
+						<label class="query-name" for="checkbox-id-1">
+							<!-- Lorem ipsum text will be dynamically added here -->
+						</label>
 					</div>
 				</div>
+
+				<!-- Buttons -->
 				<div class="action-buttons">
+					<!-- Copy -->
 					<button class="btn-copy">Copy</button>
 
+					<!-- More - Dropdown menu -->
 					<ul class="dropdown-menu">
 						<li>
 							<a class="btn-more-settings" href="javascript:void(0)">
@@ -319,6 +431,7 @@
 									width="13"
 								/>
 							</a>
+							<!-- Menu -->
 							<ul class="dropdown-panel">
 								<li>
 									<img
@@ -329,20 +442,33 @@
 									Archive
 								</li>
 								<li>
-									<img
-										src="resources/assets/icons/trash-gray.svg"
-										width="20"
-										height="20"
-									/>
-									Delete
+									<a
+										class="modal-button"
+										href="#modal-delete-confirmation"
+										rel="modal:open"
+									>
+										<img
+											src="resources/assets/icons/trash-gray.svg"
+											width="20"
+											height="20"
+										/>
+										Delete
+									</a>
 								</li>
 								<li>
-									<img
-										src="resources/assets/icons/circle-gray.svg"
-										width="17"
-										height="17"
-									/>
-									Color Code
+									<a
+										class="modal-button"
+										href="#modal-color-selection"
+										rel="modal:open"
+										value="folder-content"
+									>
+										<img
+											src="resources/assets/icons/circle-gray.svg"
+											width="17"
+											height="17"
+										/>
+										Color Code
+									</a>
 								</li>
 								<li>
 									<img
@@ -364,6 +490,8 @@
 						</li>
 					</ul>
 
+					<!-- Remove -->
+					<!-- href targets the Delete Confirmation Modal by supplying the modal's id -->
 					<a
 						class="btn-remove"
 						href="#modal-delete-confirmation"
@@ -383,6 +511,7 @@
 		<script src="resources/js/jquery.min.js"></script>
 		<script src="resources/vendor/metis-menu/dist/metismenujs.min.js"></script>
 		<script src="resources/vendor/modal/modal.min.js"></script>
+		<script src="resources/vendor/datepicker/datepicker.min.js"></script>
 
 		<!-- Custom JS -->
 		<script src="resources/js/main.js"></script>
