--- a/app/popup-settings.html
+++ b/app/popup-settings.html
@@ -11,8 +11,11 @@
 
 	<body>
 		<div class="PopupSettings Content">
+			<!-- White Container -->
 			<div class="Box">
+				<!-- Main Content -->
 				<div class="container">
+					<!-- Plan -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Plan: <span class="alt">Free</span></h3>
@@ -23,6 +26,8 @@
 
 						<button class="button bg-blue" id="upgrade">Upgrade</button>
 					</div>
+
+					<!-- Open App Shortcut -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Open App Shortcut</h3>
@@ -34,6 +39,7 @@
 						<span class="value shortcut bg-gray">⌘K</span>
 					</div>
 
+					<!-- Copy Sound -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Copy Sound</h3>
@@ -48,6 +54,7 @@
 						</label>
 					</div>
 
+					<!-- Language -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Language</h3>
@@ -56,6 +63,7 @@
 						<span class="value bg-gray">English</span>
 					</div>
 
+					<!-- Date Format -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Date Format</h3>
@@ -64,6 +72,7 @@
 						<span class="value bg-gray">DD/MM/YY</span>
 					</div>
 
+					<!-- Time Format -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Time Format</h3>
@@ -72,6 +81,7 @@
 						<span class="value bg-gray">12 Hours</span>
 					</div>
 
+					<!-- Support -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Support</h3>
