--- a/app/popup-user-info.html
+++ b/app/popup-user-info.html
@@ -11,8 +11,13 @@
 
 	<body>
 		<div class="PopupUserInfo Content">
+			<!-- White Container -->
 			<div class="Box">
+
+				<!-- Main Content -->
 				<div class="container">
+
+					<!-- Plan -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Plan: <span class="alt">Free</span></h3>
@@ -23,30 +28,36 @@
 
 						<button class="button bg-blue" id="upgrade">Upgrade</button>
 					</div>
+
+					<!-- Personal Information Section -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Personal Information</h3>
 						</div>
 					</div>
 
+					<!-- Photo -->
 					<div class="item form-item">
 						<h4 class="form-name">Photo</h3>
 						<img class="photo" src="resources/assets/images/profile.jpg"/>
 						<button class="button bg-green" id="change-">Change</button>
 					</div>
 
+					<!-- Name -->
 					<div class="item form-item">
 						<h4 class="form-name">Name</h3>
 						<span class="form-value">Julian Cabada</span>
 						<button class="button bg-green" id="change-">Change</button>
 					</div>
 
+					<!-- Email -->
 					<div class="item form-item">
 						<h4 class="form-name">Email</h3>
 						<span class="form-value">jcabada96@gmail.com</span>
 						<button class="button bg-green" id="change-">Change</button>
 					</div>
 
+					<!-- Password -->
 					<div class="item form-item">
 						<h4 class="form-name bold">Password</h3>
 						<span class="form-value">***************</span>
@@ -63,7 +74,7 @@
 		<!-- Custom JS -->
 		<script src="./resources/js/main.js"></script>
 		<script>
-			initializePopupSettings();
+			initializePopupUserInfo();
 		</script>
 	</body>
 </html>
