--- a/app/settings.html
+++ b/app/settings.html
@@ -11,12 +11,20 @@
 
 	<body>
 		<div class="Settings Content">
+			<!-- Container -->
 			<div class="Box">
+				<!-- Logo -->
 				<img class="logo" src="resources/assets/icons/box.svg" />
+
+				<!-- Header -->
 				<h3 class="header text-blue">Let’s set up some details</h3>
+
+				<!-- Description -->
 				<p class="description">You can always change this settings later</p>
 
+				<!-- Main Content -->
 				<div class="container">
+					<!-- Open App Shortcut -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Open App Shortcut</h3>
@@ -28,6 +36,7 @@
 						<span class="value shortcut bg-gray">⌘K</span>
 					</div>
 
+					<!-- Copy Sound -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Copy Sound</h3>
@@ -42,6 +51,7 @@
 						</label>
 					</div>
 
+					<!-- Language -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Language</h3>
@@ -50,6 +60,7 @@
 						<span class="value bg-gray">English</span>
 					</div>
 
+					<!-- Date Format -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Date Format</h3>
@@ -58,6 +69,7 @@
 						<span class="value bg-gray">DD/MM/YY</span>
 					</div>
 
+					<!-- Time Format -->
 					<div class="item">
 						<div class="label">
 							<h3 class="name">Time Format</h3>
@@ -67,6 +79,7 @@
 					</div>
 				</div>
 
+				<!-- Ready Button -->
 				<button class="btn-submit bg-blue" id="ready">Ready!</button>
 			</div>
 		</div>
