Add more functionalities

--- a/app/main.html
+++ b/app/main.html
@@ -389,7 +389,7 @@
 				</div>
 			</div>
 
-			<!-- Popup for Copied -->
+			<!-- Snackbar -->
 			<div class="Snackbar" id="snackbar"></div>
 
 			<!-- Cloneable Folder Content : Used for dynamically inserting contents	 -->
