--- a/app/popup-user-info.html
+++ b/app/popup-user-info.html
@@ -40,28 +40,28 @@
 					<div class="item form-item">
 						<h4 class="form-name">Photo</h3>
 						<img class="photo" src="resources/assets/images/profile.jpg"/>
-						<button class="button bg-green" id="change-">Change</button>
+						<button class="button change-button bg-green" value="change-photo">Change</button>
 					</div>
 
 					<!-- Name -->
 					<div class="item form-item">
 						<h4 class="form-name">Name</h3>
 						<span class="form-value">Julian Cabada</span>
-						<button class="button bg-green" id="change-">Change</button>
+						<button class="button change-button bg-green" value="change-name">Change</button>
 					</div>
 
 					<!-- Email -->
 					<div class="item form-item">
 						<h4 class="form-name">Email</h3>
 						<span class="form-value">jcabada96@gmail.com</span>
-						<button class="button bg-green" id="change-">Change</button>
+						<button class="button change-button bg-green" value="change-email">Change</button>
 					</div>
 
 					<!-- Password -->
 					<div class="item form-item">
 						<h4 class="form-name bold">Password</h3>
 						<span class="form-value">***************</span>
-						<button class="button bg-green" id="change-">Change</button>
+						<button class="button change-button bg-green" value="change-password">Change</button>
 					</div>
 
 				</div>
