--- a/app/popup-settings.html
+++ b/app/popup-settings.html
@@ -30,13 +30,15 @@
 					<!-- Open App Shortcut -->
 					<div class="item">
 						<div class="label">
-							<h3 class="name">Open App Shortcut</h3>
+							<h3 class="name">
+								Open App Shortcut <span class="shortcut-on hide">on</span>
+							</h3>
 							<p class="note">
 								Use this short cut to open up Kleep’s Dashboard
 							</p>
 						</div>
 
-						<span class="value shortcut bg-gray">⌘K</span>
+						<span class="value shortcut bg-gray" id="hotkey-value">⌘ + K</span>
 					</div>
 
 					<!-- Copy Sound -->
@@ -49,7 +51,7 @@
 						</div>
 
 						<label class="Switch">
-							<input type="checkbox" />
+							<input type="checkbox" id="copy-sounds-input" />
 							<span class="slider round"></span>
 						</label>
 					</div>
@@ -60,7 +62,7 @@
 							<h3 class="name">Language</h3>
 						</div>
 
-						<span class="value bg-gray">English</span>
+						<span class="value bg-gray" id="language-input">English</span>
 					</div>
 
 					<!-- Date Format -->
@@ -69,7 +71,7 @@
 							<h3 class="name">Date Format</h3>
 						</div>
 
-						<span class="value bg-gray">DD/MM/YY</span>
+						<span class="value bg-gray" id="date-format-input">DD/MM/YY</span>
 					</div>
 
 					<!-- Time Format -->
@@ -78,7 +80,7 @@
 							<h3 class="name">Time Format</h3>
 						</div>
 
-						<span class="value bg-gray">12 Hours</span>
+						<span class="value bg-gray" id="time-format-input">12 Hours</span>
 					</div>
 
 					<!-- Support -->
@@ -91,10 +93,14 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- Snackbar -->
+			<div class="Snackbar" id="snackbar"></div>
 		</div>
 
 		<!-- Vendor JS -->
 		<script src="./resources/js/jquery.min.js"></script>
+		<script src="./resources/vendor/hotkey/hotkey.min.js"></script>
 
 		<!-- Custom JS -->
 		<script src="./resources/js/main.js"></script>
