Add logo and demo video

--- a/app/login.html
+++ b/app/login.html
@@ -14,7 +14,7 @@
 			<!-- Container -->
 			<div class="Box">
 				<!-- Logo -->
-				<img class="logo" src="resources/assets/icons/box.svg" />
+				<img class="logo" src="resources/assets/images/logo.png" />
 
 				<!-- Header -->
 				<h3 class="header text-blue">Welcome!</h3>
