--- a/app/main.html
+++ b/app/main.html
@@ -25,7 +25,9 @@
 			<!-- Header Section -->
 			<div class="header">
 				<!-- Column: Logo -->
-				<div class="logo"></div>
+				<div class="logo">
+					<img class="logo" src="resources/assets/images/logo.png" />
+				</div>
 
 				<!-- Column: Configuration -->
 				<div class="configuration">
