Implement today functionality

--- a/app/main.html
+++ b/app/main.html
@@ -59,9 +59,9 @@
 								id="datepicker-trigger"
 								data-toggle="datepicker"
 							>
-								<span class="date-text month">June</span>
-								<span class="date-text day">05</span>
-								<span class="date-text year">2020</span>
+								<span class="date-text month"></span>
+								<span class="date-text day"></span>
+								<span class="date-text year"></span>
 								<img
 									class="arrow-icon"
 									src="resources/assets/icons/arrow-down.svg"
